@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2004/02/12 15:17:08 minskim Exp $
+$NetBSD: distinfo,v 1.4 2004/03/20 19:47:17 minskim Exp $
 
-SHA1 (teixsl-html-3.1/teixsl-html.zip) = 05a21fa244ae7bfaf7a3aedcc136f206db168a4e
-Size (teixsl-html-3.1/teixsl-html.zip) = 60518 bytes
+SHA1 (teixsl-html-3.1nb1/teixsl-html.zip) = 8f055dabb45a55e2c58a885d74c92bc522cc39ca
+Size (teixsl-html-3.1nb1/teixsl-html.zip) = 60620 bytes
